<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudRecordApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_stud_record">AddStudRecord</string>
    <string name="hint_name">Student Id</string>
    <string name="hint_q1">Q1 score</string>
    <string name="hint_q2">Q2 score</string>
    <string name="hint_q3">Q3 score</string>
    <string name="hint_q4">Q4 score</string>
    <string name="hint_q5">Q5 score</string>
    <string name="button_save">Save Students Records</string>
    <string name="add_stud_record_button">Add A Student Record</string>
    <string name="view_all_record_button">View All Student Records</string>
    <string name="title_activity_add_record">AddRecordActivity</string>
    <string name="view_all_statistics_button"> View All Statistics</string>
    <string name="label_stud">Student Id:</string>
    <string name="label_q1">Q1 Score:</string>
    <string name="label_q2">Q2 Score:</string>
    <string name="label_q3">Q3 Score:</string>
    <string name="label_q4">Q4 Score:</string>
    <string name="label_q5">Q5 Score:</string>
    <string name="return_list">Return to List</string>
    <string name="title_activity_record_list">RecordListActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="stats_name">Statistics</string>
    <string name="stats_high">High Score</string>
    <string name="stats_low">Low Score</string>
    <string name="stats_avg">Average</string>

</resources>
