<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" android:layout_weight="1">
   <LinearLayout android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical" android:padding="5dp">
      <EditText android:id="@+id/studEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_name"
         android:inputType="number"></EditText>      
      <EditText android:id="@+id/q1EditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_q1" 
         android:inputType="number"></EditText>
      <EditText android:id="@+id/q2EditText"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_q2"
         android:inputType="number"></EditText>
      <EditText android:id="@+id/q3EditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_q3"
         android:inputType="number"></EditText>
      <EditText android:id="@+id/q4EditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionDone" android:hint="@string/hint_q4"
         android:inputType="number"></EditText>
      <EditText android:id="@+id/q5EditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionDone" android:hint="@string/hint_q5"
         android:inputType="number"></EditText>
      <Button android:id="@+id/saveRecordButton" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/button_save"></Button>
   </LinearLayout>
</ScrollView>