<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/addStudRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/add_stud_record_button" />

    <Button
        android:id="@+id/viewAllRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addStudRecordButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/view_all_record_button" />

    <Button
        android:id="@+id/viewAllStatisticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewAllRecordButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/view_all_statistics_button" />

</RelativeLayout>
